2014-07-18  Jonathan Wakely  <jwakely@redhat.com>

	* doc/extend.texi (Template Instantiation): Remove stray parenthesis.

2014-07-18  Chung-Ju Wu  <jasonwucj@gmail.com>

	* config/nds32/nds32.c (nds32_can_eliminate): Follow the
	GNU coding standards.
	(nds32_register_move_cost): Likewise.
	(nds32_memory_move_cost): Likewise.
	(nds32_address_cost): Likewise.

2014-07-18  Jan-Benedict Glaw  <jbglaw@lug-owl.de>

	* config/mmix/mmix.c (mmix_intval): Drop unused automatic variable.

2014-07-17  John David Anglin  <danglin@gcc.gnu.org>

	* config/pa/pa-linux.h (TARGET_OS_CPP_BUILTINS): Remove defines for
	__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1, __GCC_HAVE_SYNC_COMPARE_AND_SWAP_2
	and __GCC_HAVE_SYNC_COMPARE_AND_SWAP_4.
	(HAVE_sync_compare_and_swapqi): Define.
	(HAVE_sync_compare_and_swaphi): Likewise.
	(HAVE_sync_compare_and_swapsi): Likewise.

2014-07-17  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/mips/p5600.md: Add missing cpu tests.

2014-07-17  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/arm_neon.h (vfma_f64): New intrinsic.
	(vmla_f64): Likewise.
	(vfms_f64): Likewise.
	(vmls_f64): Likewise.

2014-07-17  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/aarch64.c (aarch64_frint_unspec_p): New function.
	(aarch64_rtx_costs): Handle FIX, UNSIGNED_FIX, UNSPEC.

2014-07-17  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/arm_neon.h (vmlal_high_lane_s16): Fix type.
	(vmlal_high_lane_s32): Likewise.
	(vmlal_high_lane_u16): Likewise.
	(vmlal_high_lane_u32): Likewise.
	(vmlsl_high_lane_s16): Likewise.
	(vmlsl_high_lane_s32): Likewise.
	(vmlsl_high_lane_u16): Likewise.
	(vmlsl_high_lane_u32): Likewise.

2014-07-17  Terry Guo  <terry.guo@arm.com>

	* config/arm/types.md (alu_reg): Replaced by alu_sreg and alu_dsp_reg.
	(alus_reg): Renamed to alus_sreg.
	* config/arm/arm-fixed.md: Change type of non-dsp instructions
	from alu_reg to alu_sreg.  Change type of dsp instructions from
	alu_reg to alu_dsp_reg.